# Multi-Agents

./: .gitignore
ai/: README.md  pyproject.toml  setup_laptop.bat  start_server.bat
ai/configs/: relations.yaml  training.yaml
ai/data/eval/: test_prompts.yaml
ai/data/raw/: bernhardt.jsonl  elias.jsonl  elias_casual.jsonl  elias_multiturn.jsonl  elias_rag.jsonl  finn.jsonl  finn_casual.jsonl  finn_marker_augment.jsonl  mathilda.jsonl  mathilda_casual.jsonl  mathilda_rag.jsonl
ai/data/seed/: casual_seeds.yaml  memories.yaml  multiturn_seeds.yaml
ai/legacy/: setup_laptop_with_lora.bat
ai/legacy/data/eval/: multiturn_scenarios.yaml
ai/legacy/data/processed/: bernhardt.jsonl  elias.jsonl  finn.jsonl  hermann.jsonl  mathilda.jsonl
ai/legacy/data/raw/: bernhardt_casual.jsonl  bernhardt_multiturn.jsonl  bernhardt_rag.jsonl  finn_multiturn.jsonl  (+7 more)
ai/scripts/: STATUS.md  eval_multiturn_drift.py  eval_persona.py  eval_propagation.py  generate_casual_data.py  generate_rag_data.py  preprocess.py  run_server.py  run_simulation.py  seed_memory.py  test_compare.py  test_inference.py  test_memory_chat.py  test_npc_conversation.py  test_server.py  test_tick.py  test_tick_http.py  train_lora.py  verify_setup.py
ai/scripts/legacy/: build_multiturn_data.py  eval_persona.py  preprocess.py  test_casual.py  test_multiturn.py
ai/src/eval/: distortion.py  propagation_rate.py
ai/src/memory/: __init__.py  chat.py  retriever.py  schema.py  store.py
ai/src/propagation/: __init__.py  graph.py  simulator.py  transformer.py
ai/src/server/: __init__.py  app.py  engine.py
(+63 files in other folders)
